...
    @IBOutlet private weak var autoconsentToggle: UISwitch!
    @IBOutlet private weak var infoText: UILabel!
    
    private lazy var appSettings = AppDependencyProvider.shared.appSettings
        
    static func loadFromStoryboard() -> UIViewController {
        return UIStoryboard(name: "Settings", bundle: nil).instantiateViewController(withIdentifier: "AutoconsentSettingsViewController")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        decorate()

...
