...
    @ViewBuilder
    var duckAIEnableToggleRow: some View {
        SettingsCellView(label: UserText.settingsEnableAiChat,
                         subtitle: UserText.settingsEnableAiChatSubtitle,
                         image: Image(uiImage: DesignSystemImages.Glyphs.Size24.aiChat),
                         accessory: .toggle(isOn: viewModel.isAiChatEnabledBinding),
                         accessoryAccessibilityIdentifier: "Settings.AIFeatures.EnableToggle")
    }

    @ViewBuilder
    var duckAISearchInputRows: some View {
        let pickerRow = HStack {
            SettingsAIExperimentalPickerView(isDuckAISelected: viewModel.aiChatSearchInputEnabledBinding)
...
