...
                                                <outlet property="trackers3Animation" destination="E8n-8r-JML" id="txQ-Qp-gP8"/>
                                            </connections>
                                        </view>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fqM-N4-jNd" customClass="TextFieldWithInsets" customModule="DuckDuckGo" customModuleProvider="target"
                                            <rect key="frame" x="30" y="0.0" width="283" height="40"/>
                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="searchEntry">
                                                <accessibilityTraits key="traits" searchField="YES"/>
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" smartQuotesType="no"/>
...
                            <connections>
                                <action selector="onAccessoryPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="Huv-iA-xXy"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1rB-5w-de3">
                            <rect key="frame" x="54" y="0.0" width="30" height="43"/>
                            <accessibility key="accessibilityConfiguration" label="Settings"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="LgT-YY-fGl"/>
                            </constraints>
                            <state key="normal" image="Settings-24"/>
                            <connections>
                                <action selector="onSettingsButtonPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="Vtp-d6-wPM"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJo-2d-gri">
                            <rect key="frame" x="108" y="0.0" width="30" height="43"/>
                            <accessibility key="accessibilityConfiguration" label="Browsing Menu"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="JrJ-da-Qn3"/>
                            </constraints>
                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="21"/>
                            <connections>
                                <action selector="onMenuButtonPressed:" destination="ojX-nM-dyN" eventType="touchUpInside" id="Ixc-Oz-zYw"/>
...
