...
                title: CardItemText("Recently visited sites", font: .bodyRegular),
                text: CardItemText("Show when searching. Private, only on your device.", font: .footnoteRegular),
                trailing: .toggle($recentSitesOn, tint: Color(designSystemColor: .accentPrimary)))

            CardItem(
                icon: CardItemIcon(position: .leadingColumn, visual: .image(Image(systemName: "arrow.triangle.2.circlepath")), size: .size24),
                title: CardItemText("Sync", font: .bodyRegular),
                trailing: .toggle($syncOn, tint: Color(designSystemColor: .accentPrimary)))
        }
        .padding()
    }
}

...
