...

        alertController.addTextField { textField in
            textField.placeholder = "Number"
            textField.keyboardType = .numberPad
        }

        let submitAction = UIAlertAction(title: "Add", style: .default) { [unowned alertController] _ in
            let textField = alertController.textFields![0]
            if let numberString = textField.text, let number = Int(numberString) {
                self.addLogins(number)
            }
        }
        alertController.addAction(submitAction)
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        present(alertController, animated: true)
    }

    private func addLogins(_ count: Int) {
        let secureVault = try? AutofillSecureVaultFactory.makeVault(reporter: SecureVaultReporter())

...
