...
                            <connections>
                                <action selector="onEditPressed:" destination="aq5-lx-Pms" id="u4l-M0-guB"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Bookmarks" id="oMv-60-GGW">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="RuZ-zV-tu8">
                            <connections>
                                <action selector="onDonePressed:" destination="aq5-lx-Pms" id="7U4-5t-4Re"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
...
                                <rect key="frame" x="16" y="99" width="343" height="44.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fZI-vz-Ikc" id="MfZ-X5-f9l">
                                    <rect key="frame" x="0.0" y="0.0" width="343" height="44.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KiU-Wb-7jj">
                                            <rect key="frame" x="16" y="0.0" width="315" height="44"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="44" id="XHp-zE-tVW"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
...
