...
                self?.showMockCredentialsSavedPopover()
            }
            .store(in: &cancellables)
    }

    fileprivate func showMockSaveCredentialsPopover() {
        let account = SecureVaultModels.WebsiteAccount(title: nil, username: "example-username", domain: "example.com")
        let mockCredentials = SecureVaultModels.WebsiteCredentials(account: account, password: "password".data(using: .utf8)!)

        popovers.displaySaveCredentials(mockCredentials,
                                        automaticallySaved: false,
                                        backfilled: false,
                                        usingView: passwordManagementButton,
...
