appId: com.duckduckgo.mobile.ios.alpha
---

- tapOn: "Debug"
- tapOn: "Settings"
- tapOn: "Done"
