# cset_sync_dev_environment.yaml

appId: com.duckduckgo.mobile.ios
---

#Open Debug Menu
- runFlow:
    file: ./open_debug_menu.yaml

- scrollUntilVisible:
    element: Sync
    direction: DOWN
    centerElement: false
- tapOn: Sync
- scroll
- scrollUntilVisible:
    element: Production
    direction: DOWN
    centerElement: false
- tapOn: Production
- tapOn: Debug
- tapOn: Settings