appId: com.duckduckgo.mobile.ios.alpha
---

- tapOn: "Debug"
- tapOn: "Settings"
- tapOn: "Done"
- pressKey: HOME
- launchApp:
    appId: com.duckduckgo.mobile.ios.alpha
    stopApp: false
    clearState: false
- stopApp
- launchApp:
    appId: com.duckduckgo.mobile.ios.alpha
    clearState: false
- extendedWaitUntil:
    visible:
      id: "searchEntry"
    timeout: 15000
